--- a/News.html
+++ b/News.html
@@ -59,6 +59,11 @@
                     <b>● 祝贺程航老师的论文"Vision-language pre-training via modal interaction"被模式识别领域内的顶级刊物，中科院一区，TOP期刊Pattern Recognition录用！</b>
 				</div>
                 </div>
+
+		<div class="media-body">
+                    <b>● 祝贺程航老师，在“华为杯”第二十一届中国研究生数学建模竞赛获得先进个人奖！</b>
+				</div>
+                </div>
 				
 				<div class="publication media">
                 <div class="media-body">
