--- a/News.html
+++ b/News.html
@@ -60,6 +60,7 @@
 				</div>
                 </div>
 
+		<div class="publication media">
 		<div class="media-body">
                     <b>● 祝贺程航老师，在“华为杯”第二十一届中国研究生数学建模竞赛获得先进个人奖！</b>
 				</div>
