--- a/Publications.html
+++ b/Publications.html
@@ -147,7 +147,7 @@
                     <b>Model Poisoning Attack in Differential Privacy-Based Federated Learning</b>
                     <br> 
                     M Yang,<b> H Cheng*</b>, F Chen, X Liu, M Wang, and X Li, Information Sciences, 2023         <br>
-					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025523002141">[PDF]</a>
+					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025523002141">[PDF]</a>  <a href="https://github.com/paranoid-27/Model-Shuffle-Attack">[Code]</a>
 				</div>
                 </div>
 
