--- a/News.html
+++ b/News.html
@@ -53,8 +53,14 @@
                 </div>
 				
 			</div>
+
+		<div class="publication media">
+                <div class="media-body">
+                    <b>● 祝贺许永亮的论文"PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing"被国际移动计算领域顶级期刊，CCF-A类期刊，中科院一区，TOP期刊IEEE Transactions on Mobile Computing录用！</b>
+				</div>
+                </div>
 			
-			    <div class="publication media">
+		<div class="publication media">
                 <div class="media-body">
                     <b>● 祝贺程航老师的论文"Vision-language pre-training via modal interaction"被模式识别领域内的顶级刊物，中科院一区，TOP期刊Pattern Recognition录用！</b>
 				</div>
