--- a/News.html
+++ b/News.html
@@ -56,7 +56,7 @@
 
 		<div class="publication media">
                 <div class="media-body">
-                    <b>● 祝贺许永亮同学的论文"PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing"被国际移动计算领域顶级期刊，CCF-A类期刊，中科院一区，TOP期刊IEEE Transactions on Mobile Computing录用！</b>
+                    <b>● 祝贺许永亮同学的论文"PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing"被国际移动计算领域顶级期刊，CCF-A类期刊，TOP期刊IEEE Transactions on Mobile Computing录用！</b>
 				</div>
                 </div>
 			
