--- a/News.html
+++ b/News.html
@@ -48,7 +48,7 @@
 <div class="container" id="year">
                 <div class="col-sm-12">
                     <h2>
-                        <b id="2024">2024</b>
+                        <b id="2025">2024</b>
                     </h2>
                 </div>
 				
@@ -59,6 +59,14 @@
                     <b>● 祝贺许永亮同学的论文"PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing"被国际移动计算领域顶级期刊，CCF-A类期刊，TOP期刊IEEE Transactions on Mobile Computing录用！</b>
 				</div>
                 </div>
+
+		<div class="container" id="year">
+                <div class="col-sm-12">
+                    <h2>
+                        <b id="2024">2023</b>
+                    </h2>
+                </div>
+            </div>
 			
 		<div class="publication media">
                 <div class="media-body">
