--- a/Publications.html
+++ b/Publications.html
@@ -71,6 +71,24 @@
 <div class="container" id="year">
                 <div class="col-sm-12">
                     <h2>
+                        <b id="2025">● 2025</b>
+                    </h2>
+                </div>
+				
+			</div>
+		
+		<div class="publication media">
+                <div class="media-body">
+                    <b>PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing</b>
+                    <br> 
+                    Y Xu,<b> H Cheng</b>, X Liu, C Jiang, X Zhang, and M Wang, IEEE Transactions on Mobile Computing, 2025         <br>
+					<a href="https://www.computer.org/csdl/journal/tm/5555/01/10829788/23jEYlvm1i0">[PDF]</a>
+				</div>
+                </div>
+		
+<div class="container" id="year">
+                <div class="col-sm-12">
+                    <h2>
                         <b id="2024">● 2024</b>
                     </h2>
                 </div>
