--- a/Publications.html
+++ b/Publications.html
@@ -76,12 +76,21 @@
                 </div>
 				
 			</div>
+
+		<div class="publication media">
+                <div class="media-body">
+                    <b>JPEG Reversible Data Hiding via Block Sorting Optimization and Dynamic Iterative Histogram Modification</b>
+                    <br> 
+                    F Li, Q Wang, <b> H Cheng</b>, X Zhang, C Qin, IEEE Transactions on Multimedia, 2025         <br>
+					<a href="https://ieeexplore.ieee.org/abstract/document/10855457">[PDF]</a>
+				</div>
+                </div>
 		
 		<div class="publication media">
                 <div class="media-body">
                     <b>PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing</b>
                     <br> 
-                    Y Xu,<b> H Cheng</b>, X Liu, C Jiang, X Zhang, and M Wang, IEEE Transactions on Mobile Computing, 2025         <br>
+                    Y Xu,<b> H Cheng*</b>, X Liu, C Jiang, X Zhang, and M Wang, IEEE Transactions on Mobile Computing, 2025         <br>
 					<a href="https://www.computer.org/csdl/journal/tm/5555/01/10829788/23jEYlvm1i0">[PDF]</a>
 				</div>
                 </div>
