--- a/News.html
+++ b/News.html
@@ -56,6 +56,12 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>● 祝贺陈云同学荣获2024年硕士研究生国家奖学金！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>● 祝贺许永亮同学的论文"Lightweight Multi-User Public-Key Authenticated Encryption With Keyword Search"被信息安全领域顶级期刊，CCF-A类期刊，TOP期刊IEEE Transactions on Information Forensics and Security录用！</b>
 				</div>
                 </div>
