--- a/News.html
+++ b/News.html
@@ -56,7 +56,7 @@
 
 		<div class="publication media">
                 <div class="media-body">
-                    <b>● 祝贺陈云同学荣获2024年硕士研究生国家奖学金！</b>
+                    <b>● 祝贺陈云同学荣获硕士研究生国家奖学金！</b>
 				</div>
                 </div>
 
