--- a/Publications.html
+++ b/Publications.html
@@ -81,9 +81,18 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>Lightweight Multi-User Public-Key Authenticated Encryption With Keyword Search</b>
+                    <br> 
+                    Y Xu, <b> H Cheng</b>, J Li, X Liu, X Zhang, and M Wang, IEEE Transactions on Information Forensics and Security, 2025         <br>
+					<a href="https://ieeexplore.ieee.org/document/10919105">[PDF]</a>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>JPEG Reversible Data Hiding via Block Sorting Optimization and Dynamic Iterative Histogram Modification</b>
                     <br> 
-                    F Li, Q Wang, <b> H Cheng</b>, X Zhang, C Qin, IEEE Transactions on Multimedia, 2025         <br>
+                    F Li, Q Wang, <b> H Cheng</b>, X Zhang, and C Qin, IEEE Transactions on Multimedia, 2025         <br>
 					<a href="https://ieeexplore.ieee.org/abstract/document/10855457">[PDF]</a>
 				</div>
                 </div>
