--- a/Publications.html
+++ b/Publications.html
@@ -83,7 +83,7 @@
                 <div class="media-body">
                     <b>Lightweight Multi-User Public-Key Authenticated Encryption With Keyword Search</b>
                     <br> 
-                    Y Xu, <b> H Cheng</b>, J Li, X Liu, X Zhang, and M Wang, IEEE Transactions on Information Forensics and Security, 2025         <br>
+                    Y Xu, <b> H Cheng*</b>, J Li, X Liu, X Zhang, and M Wang, IEEE Transactions on Information Forensics and Security, 2025         <br>
 					<a href="https://ieeexplore.ieee.org/document/10919105">[PDF]</a>
 				</div>
                 </div>
