--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         </li>
 
                         <li style="font-size:18px">
-                            <a href="Publications.html">Publications</a><br>
+                            <a href="Publications.html"><b>Publications</b></a><br>
                         </li>
 
                         <li style="font-size:18px">
