--- a/Publications.html
+++ b/Publications.html
@@ -129,7 +129,7 @@
                     <b>EAN: Edge-Aware Network for Image Manipulation Localization</b>
                     <br> 
                     Y Chen,<b> H Cheng*</b>, H Wang, X Liu, F Chen, F Li, X Zhang, and M Wang, IEEE Transactions on Circuits and Systems for Video Technology, 2024         <br>
-					<a href="https://ieeexplore.ieee.org/abstract/document/10705343">[PDF]</a>  <a href="https://github.com/cycycy5464/EAN-Edge-Aware-Net.git">[Code]</a>
+					<a href="https://ieeexplore.ieee.org/abstract/document/10705343">[PDF]</a>  <a href="https://github.com/cycycy5464/EAN-Edge-Aware-Net.git" style="color: red;">[Code]</a>
                 </div>
                 </div>
 				
@@ -185,7 +185,7 @@
                     <b>Model Poisoning Attack in Differential Privacy-Based Federated Learning</b>
                     <br> 
                     M Yang,<b> H Cheng*</b>, F Chen, X Liu, M Wang, and X Li, Information Sciences, 2023         <br>
-					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025523002141">[PDF]</a>  <a href="https://github.com/paranoid-27/Model-Shuffle-Attack">[Code]</a>
+					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0020025523002141">[PDF]</a>  <a href="https://github.com/paranoid-27/Model-Shuffle-Attack" style="color: red;">[Code]</a>
 				</div>
                 </div>
 
