--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 </td>
 </tr>
 </table>
-			<div class="panel panel-body">
-                    <h1 style="font-size:30px">
+			<div class="center-block">
+                    <h1 style="font-size:15px">
                         <b>Hang Cheng（程航）</b>
                     </h1>
 
