--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </tr>
 </table>
 			<div class="center-block">
-                    <h1 style="font-size:15px">
+                    <h1 style="color: red; font-size:15px">
                         <b>Hang Cheng（程航）</b>
                     </h1>
 
