--- a/index.html
+++ b/index.html
@@ -95,9 +95,7 @@
 </tr>
 </table>
 			<div class="center-block">
-                    <h1 style="color: red; font-size:15px">
-                        <b>Hang Cheng（程航）</b>
-                    </h1>
+                    <h1 style="color: red; font-size:15px">现招收2025级硕士研究生，欢迎感兴趣的同学邮件联系！</h1>
 
                 </div>
 			
