--- a/Publications.html
+++ b/Publications.html
@@ -84,7 +84,7 @@
                     <b>Lightweight Multi-User Public-Key Authenticated Encryption With Keyword Search</b>
                     <br> 
                     Y Xu, <b> H Cheng*</b>, J Li, X Liu, X Zhang, and M Wang, IEEE Transactions on Information Forensics and Security, 2025         <br>
-					<a href="https://ieeexplore.ieee.org/document/10919105">[PDF]</a>
+					<a href="https://ieeexplore.ieee.org/document/10919105">[PDF]</a> <a href="https://github.com/EvilRhua/LM-PAEKS" style="color: red;">[Code]</a>
 				</div>
                 </div>
 
