--- a/Group.html
+++ b/Group.html
@@ -499,12 +499,12 @@
             <!-- <a href="/members/poggi"> -->
                 <div class="member-container container p-0 mb-2 rounded-circle ring">
                     
-                    <img src="./images/严婉熙2020.jpg" class="member-img">
+                    <img src="./images/2018黄逸冰.jpg" class="member-img">
                 </div>
             <!-- </a> -->
 
-            <div class="member-name m-0 mt-2">严婉熙</div>
-            <div class="member-position" >锐捷网络股份有限公司</div>
+            <div class="member-name m-0 mt-2">黄逸冰</div>
+            <div class="member-position" >兴业数金</div>
             <div class="row gx-3 justify-content-center">
 
             </div>
