--- a/Group.html
+++ b/Group.html
@@ -527,12 +527,12 @@
             <!-- <a href="/members/poggi"> -->
                 <div class="member-container container p-0 mb-2 rounded-circle ring">
                     
-                    <img src="./images/杨铭2020.jpg" class="member-img">
+                    <img src="./images/2019颜娜招.jpg" class="member-img">
                 </div>
             <!-- </a> -->
 
-            <div class="member-name m-0 mt-2">杨铭</div>
-            <div class="member-position" >锐捷网络股份有限公司</div>
+            <div class="member-name m-0 mt-2">颜娜招</div>
+            <div class="member-position" >厦门市同安区财政国库集中支付中心</div>
             <div class="row gx-3 justify-content-center"></div>
 
         </div>
@@ -543,12 +543,12 @@
             <!-- <a href="/members/poggi"> -->
                 <div class="member-container container p-0 mb-2 rounded-circle ring">
                     
-                    <img src="./images/伍力2020.jpg" class="member-img">
+                    <img src="./images/2019黄芹健.jpg" class="member-img">
                 </div>
             <!-- </a> -->
 
-            <div class="member-name m-0 mt-2">伍力</div>
-            <div class="member-position" >中联重科股份有限公司</div>
+            <div class="member-name m-0 mt-2">黄芹健</div>
+            <div class="member-position" >上海循态量子科技有限公司</div>
             <div class="row gx-3 justify-content-center"></div>
 
         </div>  
