--- a/Group.html
+++ b/Group.html
@@ -622,12 +622,12 @@
             <!-- <a href="/members/poggi"> -->
                 <div class="member-container container p-0 mb-2 rounded-circle ring">
                     
-                    <img src="./images/伍力2020.jpg" class="member-img">
+                    <img src="./images/2020李溪滨.jpg" class="member-img">
                 </div>
             <!-- </a> -->
 
-            <div class="member-name m-0 mt-2">lili</div>
-            <div class="member-position" >中联重科股份有限公司</div>
+            <div class="member-name m-0 mt-2">李溪滨</div>
+            <div class="member-position" >锐捷网络</div>
             <div class="row gx-3 justify-content-center"></div>
 
         </div> 
