--- a/Group.html
+++ b/Group.html
@@ -504,7 +504,7 @@
             <!-- </a> -->
 
             <div class="member-name m-0 mt-2">黄逸冰</div>
-            <div class="member-position" >兴业数金</div>
+            <div class="member-position" >兴业数字金融服务股份有限公司</div>
             <div class="row gx-3 justify-content-center">
 
             </div>
@@ -627,7 +627,7 @@
             <!-- </a> -->
 
             <div class="member-name m-0 mt-2">李溪滨</div>
-            <div class="member-position" >锐捷网络</div>
+            <div class="member-position" >锐捷网络股份有限公司</div>
             <div class="row gx-3 justify-content-center"></div>
 
         </div> 
