--- a/News.html
+++ b/News.html
@@ -56,6 +56,12 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>● 祝贺王海畴同学的论文"Image Manipulation Localization via Semantic-Guided Feature Enhancement and Deep Multi-Scale Edge Supervision"被CCF-C类期刊，中科院2区期刊Neurocomputing录用！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>● 祝贺陈云同学荣获硕士研究生国家奖学金！</b>
 				</div>
                 </div>
