--- a/index.html
+++ b/index.html
@@ -94,10 +94,10 @@
 </td>
 </tr>
 </table>
-			<div class="center-block">
+<!-- 			<div class="center-block">
                     <h1 style="color: red; font-size:14px">现招收2025级硕士研究生，欢迎感兴趣的同学邮件联系！</h1>
 
-                </div>
+                </div> -->
 			
 	<style type="text/css">
 		td
