--- a/Group.html
+++ b/Group.html
@@ -678,7 +678,7 @@
             <!-- </a> -->
 
             <div class="member-name m-0 mt-2">吴远翔</div>
-            <div class="member-position" >申博</div>
+            <div class="member-position" >澳大利亚蒙纳士大学博士在读</div>
             <div class="row gx-3 justify-content-center"></div>
 
         </div>
