--- a/Publications.html
+++ b/Publications.html
@@ -78,6 +78,15 @@
                 </div>
 				
 			</div>
+		
+		<div class="publication media">
+                <div class="media-body">
+                    <b>Image manipulation localization via semantic-guided feature enhancement and deep multi-scale edge supervision</b>
+                    <br> 
+                    H Wang, <b> H Cheng*</b>, Y Chen, Y Xu, and M Wang, Neurocomputing, 2025         <br>
+					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225009270">[PDF]</a>
+				</div>
+                </div>
 
 		<div class="publication media">
                 <div class="media-body">
