--- a/News.html
+++ b/News.html
@@ -56,6 +56,12 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>● 祝贺倪子顺同学的论文"NiNet: A New Invertible Neural Network Architecture More Suitable for Deep Image Hiding"被CCF-B类期刊，中科院1区TOP期刊Information Processing & Management录用！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>● 祝贺王海畴同学的论文"Image Manipulation Localization via Semantic-Guided Feature Enhancement and Deep Multi-Scale Edge Supervision"被CCF-C类期刊，中科院2区期刊Neurocomputing录用！</b>
 				</div>
                 </div>
