--- a/Publications.html
+++ b/Publications.html
@@ -78,13 +78,22 @@
                 </div>
 				
 			</div>
+
+		<div class="publication media">
+                <div class="media-body">
+                    <b>NiNet: A new invertible neural network architecture more suitable for deep image hiding</b>
+                    <br> 
+                    Z Ni, <b> H Cheng*</b>, J Chen, Y Xu, F Chen, and M Wang, Information Processing & Management, 2025         <br>
+					<a href="https://authors.elsevier.com/a/1lNCS_6zz3-%7EBu">[PDF]</a> <a href="https://github.com/nizishun/NiNet.git" style="color: red;">[Code]</a>
+				</div>
+                </div>
 		
 		<div class="publication media">
                 <div class="media-body">
                     <b>Image manipulation localization via semantic-guided feature enhancement and deep multi-scale edge supervision</b>
                     <br> 
                     H Wang, <b> H Cheng*</b>, Y Chen, Y Xu, and M Wang, Neurocomputing, 2025         <br>
-					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225009270">[PDF]</a>
+					<a href="https://www.sciencedirect.com/science/article/abs/pii/S0925231225009270">[PDF]</a> <a href="https://github.com/WHC0114/Multi-Dense-Unet" style="color: red;">[Code]</a>
 				</div>
                 </div>
 
