--- a/Publications.html
+++ b/Publications.html
@@ -120,7 +120,7 @@
                     <b>PCSE: Privacy-Preserving Collaborative Searchable Encryption for Group Data Sharing in Cloud Computing</b>
                     <br> 
                     Y Xu,<b> H Cheng*</b>, X Liu, C Jiang, X Zhang, and M Wang, IEEE Transactions on Mobile Computing, 2025         <br>
-					<a href="https://www.computer.org/csdl/journal/tm/5555/01/10829788/23jEYlvm1i0">[PDF]</a>
+					<a href="https://www.computer.org/csdl/journal/tm/5555/01/10829788/23jEYlvm1i0">[PDF]</a>  <a href="https://github.com/EvilRhua/PCSE" style="color: red;">[Code]</a>
 				</div>
                 </div>
 		
