--- a/Group.html
+++ b/Group.html
@@ -128,7 +128,7 @@
                 </div>
             <!-- </a> -->
 
-            <div class="member-name m-0 mt-2">许永亮</div>
+            <div class="member-name m-0 mt-2"><a href="https://github.com/WHC0114/Multi-Dense-Unet">许永亮</a></div>
             <div class="member-position" >博士</div>
             <div class="row gx-3 justify-content-center"></div>
 
@@ -765,3 +765,4 @@
 
     </body>
 </html>
+
