--- a/News.html
+++ b/News.html
@@ -55,6 +55,12 @@
 			</div>
 
 		<div class="publication media">
+			<div class="media-body">
+				<b>● 祝贺程航老师获得福建省教学成果奖一等奖，排名第一！</b>
+			</div>
+			</div>
+
+		<div class="publication media">
                 <div class="media-body">
                     <b>● 祝贺倪子顺同学的论文"NiNet: A New Invertible Neural Network Architecture More Suitable for Deep Image Hiding"被CCF-B类期刊，中科院1区TOP期刊Information Processing & Management录用！</b>
 				</div>
@@ -176,3 +182,4 @@
 </body>
 
 </html>
+
