--- a/News.html
+++ b/News.html
@@ -56,6 +56,36 @@
 
 		<div class="publication media">
 			<div class="media-body">
+				<b>● 祝贺陈云同学入职厦门航空有限公司！</b>
+			</div>
+			</div>
+
+		<div class="publication media">
+			<div class="media-body">
+				<b>● 祝贺刘培豪同学入职海康威视数字技术股份有限公司！</b>
+			</div>
+			</div>
+
+			<div class="publication media">
+			<div class="media-body">
+				<b>● 祝贺陈姣伶同学入职中国人民银行！</b>
+			</div>
+			</div>
+
+			<div class="publication media">
+			<div class="media-body">
+				<b>● 祝贺曹鹏同学入职美团有限责任公司！</b>
+			</div>
+			</div>
+
+			<div class="publication media">
+			<div class="media-body">
+				<b>● 祝贺王海畴同学被福州大学录取！</b>
+			</div>
+			</div>
+
+		<div class="publication media">
+			<div class="media-body">
 				<b>● 祝贺程航老师获得福建省教学成果奖一等奖，排名第一！</b>
 			</div>
 			</div>
@@ -182,4 +212,5 @@
 </body>
 
 </html>
+
 
