--- a/News.html
+++ b/News.html
@@ -56,6 +56,12 @@
 
 		<div class="publication media">
 			<div class="media-body">
+				<b>● 祝贺倪子顺同学荣获硕士研究生国家奖学金！</b>
+			</div>
+			</div>
+
+		<div class="publication media">
+			<div class="media-body">
 				<b>● 祝贺陈云同学入职厦门航空有限公司！</b>
 			</div>
 			</div>
@@ -212,5 +218,6 @@
 </body>
 
 </html>
+
 
 
