--- a/News.html
+++ b/News.html
@@ -55,6 +55,12 @@
 			</div>
 
 		<div class="publication media">
+                <div class="media-body">
+                    <b>● 祝贺吴远翔同学的论文"Blockchain-Based Secure Federated Learning With Improved Consensus Protocol and Personalized Differential Privacy"被CCF-A类国际权威期刊 IEEE Transactions on Dependable and Secure Computing 录用！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
 			<div class="media-body">
 				<b>● 祝贺倪子顺同学荣获硕士研究生国家奖学金！</b>
 			</div>
@@ -218,6 +224,7 @@
 </body>
 
 </html>
+
 
 
 
