--- a/News.html
+++ b/News.html
@@ -56,6 +56,18 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>● 祝贺王海畴同学的论文"EAN: Edge-Aware Network for Image Manipulation Localization"被计算机图形学与多媒体领域的权威期刊之一，CCF-B类期刊，中科院一区，TOP期刊IEEE Transactions on Circuits and Systems for Video Technology录用！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
+                    <b>● 祝贺郑静瑜、吴祥鑫、李彩音、施黄聿心、何瑛思同学，在“华为杯”第二十二届中国研究生数学建模竞赛获得三等奖！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>● 祝贺吴远翔同学的论文"Blockchain-Based Secure Federated Learning With Improved Consensus Protocol and Personalized Differential Privacy"被CCF-A类国际权威期刊 IEEE Transactions on Dependable and Secure Computing 录用！</b>
 				</div>
                 </div>
@@ -224,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
