--- a/Publications.html
+++ b/Publications.html
@@ -81,6 +81,15 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>Blockchain-Based Secure Federated Learning With Improved Consensus Protocol and Personalized Differential Privacy</b>
+                    <br> 
+                    Y Wu, <b> H Cheng*</b>, X Liu, Y Xu, F Chen, X Zhang, and M Wang, IEEE Transactions on Dependable and Secure Computing, 2025         <br>
+					<a href="https://doi.ieeecomputersociety.org/10.1109/TDSC.2025.3626847">[PDF]</a> 
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>NiNet: A new invertible neural network architecture more suitable for deep image hiding</b>
                     <br> 
                     Z Ni, <b> H Cheng*</b>, J Chen, Y Xu, F Chen, and M Wang, Information Processing & Management, 2025         <br>
@@ -447,3 +456,4 @@
 </body>
 
 </html>
+
