--- a/News.html
+++ b/News.html
@@ -56,7 +56,7 @@
 
 		<div class="publication media">
                 <div class="media-body">
-                    <b>● 祝贺王海畴同学的论文"EAN: Edge-Aware Network for Image Manipulation Localization"被计算机图形学与多媒体领域的权威期刊之一，CCF-B类期刊，中科院一区，TOP期刊IEEE Transactions on Circuits and Systems for Video Technology录用！</b>
+                    <b>● 祝贺王海畴同学的论文"Adaptive Selective State Mechanism for Enhancing Image Manipulation Localization"被计算机图形学与多媒体领域的权威期刊之一，CCF-B类期刊，中科院一区，TOP期刊IEEE Transactions on Circuits and Systems for Video Technology录用！</b>
 				</div>
                 </div>
 
@@ -236,6 +236,7 @@
 </body>
 
 </html>
+
 
 
 
