--- a/News.html
+++ b/News.html
@@ -56,6 +56,12 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>● 祝贺许永亮同学，获得福州大学数学与统计学院第三届研究生“十佳学术之星”！</b>
+				</div>
+                </div>
+
+		<div class="publication media">
+                <div class="media-body">
                     <b>● 祝贺王海畴同学的论文"Adaptive Selective State Mechanism for Enhancing Image Manipulation Localization"被计算机图形学与多媒体领域的权威期刊之一，CCF-B类期刊，中科院一区，TOP期刊IEEE Transactions on Circuits and Systems for Video Technology录用！</b>
 				</div>
                 </div>
@@ -236,6 +242,7 @@
 </body>
 
 </html>
+
 
 
 
