--- a/News.html
+++ b/News.html
@@ -56,6 +56,12 @@
 
 		<div class="publication media">
                 <div class="media-body">
+                    <b>● 祝贺蔡婧颖同学的论文"Unified global–local feature modeling via reverse patch scaling for image manipulation localization"被视觉通信与图像表示领域的权威期刊之一 Journal of Visual Communication and Image Representation 录用！</b>
+				</div>
+                </div>
+			
+		<div class="publication media">
+                <div class="media-body">
                     <b>● 祝贺许永亮同学，获得福州大学数学与统计学院第三届研究生“十佳学术之星”！</b>
 				</div>
                 </div>
@@ -242,6 +248,7 @@
 </body>
 
 </html>
+
 
 
 
