--- a/Publications.html
+++ b/Publications.html
@@ -49,6 +49,8 @@
                     <br>
                     <h5 id="tag">
 			&nbsp;|&nbsp;
+			<a href="#2026">2026</a>
+			&nbsp;|&nbsp;
 			<a href="#2025">2025</a>
 			&nbsp;|&nbsp;
 			<a href="#2024">2024</a>
@@ -79,6 +81,15 @@
 				
 			</div>
 
+		<div class="publication media">
+                <div class="media-body">
+                    <b>Adaptive Selective State Mechanism for Enhancing Image Manipulation Localization</b>
+                    <br> 
+                    H Wang, <b> H Cheng*</b>, J Chen, Y Xu, F Li, X Zhang and M Wang, IEEE Transactions on Circuits and Systems for Video Technology, 2025         <br>
+					<a href="https://doi.org/10.1109/TCSVT.2025.3646015">[PDF]</a> 
+				</div>
+                </div>
+			
 		<div class="publication media">
                 <div class="media-body">
                     <b>Blockchain-Based Secure Federated Learning With Improved Consensus Protocol and Personalized Differential Privacy</b>
@@ -456,4 +467,5 @@
 </body>
 
 </html>
+
 
