--- a/Publications.html
+++ b/Publications.html
@@ -75,6 +75,24 @@
 <div class="container" id="year">
                 <div class="col-sm-12">
                     <h2>
+                        <b id="2026">● 2026</b>
+                    </h2>
+                </div>
+				
+			</div>
+
+			<div class="publication media">
+                <div class="media-body">
+                    <b>Unified global–local feature modeling via reverse patch scaling for image manipulation localization</b>
+                    <br> 
+                    J Cai, <b> H Cheng*</b>, J Chen, H Wang and M Wang, Journal of Visual Communication and Image Representation, 2026         <br>
+					<a href="https://doi.org/10.1016/j.jvcir.2026.104731">[PDF]</a> 
+				</div>
+                </div>
+			
+<div class="container" id="year">
+                <div class="col-sm-12">
+                    <h2>
                         <b id="2025">● 2025</b>
                     </h2>
                 </div>
@@ -467,5 +485,6 @@
 </body>
 
 </html>
+
 
 
