--- a/News.html
+++ b/News.html
@@ -48,7 +48,7 @@
 <div class="container" id="year">
                 <div class="col-sm-12">
                     <h2>
-                        <b id="2025">2025</b>
+                        <b id="2026">2026</b>
                     </h2>
                 </div>
 				
@@ -59,6 +59,17 @@
                     <b>● 祝贺蔡婧颖同学的论文"Unified global–local feature modeling via reverse patch scaling for image manipulation localization"被视觉通信与图像表示领域的权威期刊之一 Journal of Visual Communication and Image Representation 录用！</b>
 				</div>
                 </div>
+
+			
+<div class="container" id="year">
+                <div class="col-sm-12">
+                    <h2>
+                        <b id="2025">2025</b>
+                    </h2>
+                </div>
+				
+			</div>
+
 			
 		<div class="publication media">
                 <div class="media-body">
@@ -248,6 +259,7 @@
 </body>
 
 </html>
+
 
 
 
