--- a/News.html
+++ b/News.html
@@ -54,7 +54,13 @@
 				
 			</div>
 
-		<div class="publication media">
+			<div class="publication media">
+                <div class="media-body">
+                    <b>● 祝贺程航老师与福建师范大学李继国教授团队合作完成的论文"Expressive and Fully Policy-Hidden Attribute-Based Searchable Encryption Scheme for Multi-Owner"被信息安全领域顶级期刊，CCF-A类期刊，TOP期刊IEEE Transactions on Information Forensics and Security录用！</b>
+				</div>
+                </div>
+			
+			<div class="publication media">
                 <div class="media-body">
                     <b>● 祝贺蔡婧颖同学的论文"Unified global–local feature modeling via reverse patch scaling for image manipulation localization"被视觉通信与图像表示领域的权威期刊之一 Journal of Visual Communication and Image Representation 录用！</b>
 				</div>
@@ -259,6 +265,7 @@
 </body>
 
 </html>
+
 
 
 
