--- a/News.html
+++ b/News.html
@@ -53,6 +53,11 @@
                 </div>
 				
 			</div>
+					<div class="publication media">
+                <div class="media-body">
+                    <b>● 祝贺许永亮同学的论文"MPA:Lightweight and Updatable Integrity Auditirng for Decentralized Storage using Merkle Trees and Polynomial Commitments"被信息安全学科中的顶尖期刊之一,中科院1区TOP,CCF-A类期刊，IEEE Transactions on Information Forensics and Security录用！</b>
+				</div>
+                </div>
 
 			<div class="publication media">
                 <div class="media-body">
@@ -265,6 +270,7 @@
 </body>
 
 </html>
+
 
 
 
