--- a/Publications.html
+++ b/Publications.html
@@ -83,6 +83,15 @@
 
 			<div class="publication media">
                 <div class="media-body">
+                    <b>MPA: Lightweight and Updatable Integrity Auditing for Decentralized Storage using Merkle Trees and Polynomial Commitments</b>
+                    <br> 
+                    Y Xu, <b> H Cheng*</b>, J Zheng, X Zhang, and H Wang, IEEE Transactions on Information Forensics and Security, 2026         <br>
+					<a href="https://ieeexplore.ieee.org/document/11396044">[PDF]</a> 
+				</div>
+                </div>
+
+			<div class="publication media">
+                <div class="media-body">
                     <b>Unified global–local feature modeling via reverse patch scaling for image manipulation localization</b>
                     <br> 
                     J Cai, <b> H Cheng*</b>, J Chen, H Wang and M Wang, Journal of Visual Communication and Image Representation, 2026         <br>
@@ -485,6 +494,7 @@
 </body>
 
 </html>
+
 
 
 
