--- a/Publications.html
+++ b/Publications.html
@@ -92,6 +92,15 @@
 
 			<div class="publication media">
                 <div class="media-body">
+                    <b>Expressive and Fully Policy-Hidden Attribute-Based Searchable Encryption Scheme for Multi-Owner</b>
+                    <br> 
+                    Q Miao, J Li, Y Lu, <b> H Cheng*</b>, Y Zhang, and J Shen, IEEE Transactions on Information Forensics and Security, 2026         <br>
+					<a href="https://ieeexplore.ieee.org/document/11395297">[PDF]</a> 
+				</div>
+                </div>
+
+			<div class="publication media">
+                <div class="media-body">
                     <b>Unified global–local feature modeling via reverse patch scaling for image manipulation localization</b>
                     <br> 
                     J Cai, <b> H Cheng*</b>, J Chen, H Wang and M Wang, Journal of Visual Communication and Image Representation, 2026         <br>
@@ -494,6 +503,7 @@
 </body>
 
 </html>
+
 
 
 
