--- a/Publications.html
+++ b/Publications.html
@@ -94,7 +94,7 @@
                 <div class="media-body">
                     <b>Expressive and Fully Policy-Hidden Attribute-Based Searchable Encryption Scheme for Multi-Owner</b>
                     <br> 
-                    Q Miao, J Li, Y Lu, <b> H Cheng*</b>, Y Zhang, and J Shen, IEEE Transactions on Information Forensics and Security, 2026         <br>
+                    Q Miao, J Li, Y Lu, <b> H Cheng</b>, Y Zhang, and J Shen, IEEE Transactions on Information Forensics and Security, 2026         <br>
 					<a href="https://ieeexplore.ieee.org/document/11395297">[PDF]</a> 
 				</div>
                 </div>
@@ -503,6 +503,7 @@
 </body>
 
 </html>
+
 
 
 
